# social-engineering-adventure

./: .gitignore  SEA_gain_hit.xlsx  SEA_rules.docx  SEA_stats.xlsx  sequence.gv
SocialEngineeringAdventure/: CMakeCache.txt  CMakeLists.txt  movements.md
SocialEngineeringAdventure/app/: CMakeLists.txt
SocialEngineeringAdventure/app/SocialEngineeringAdventure/: CMakeLists.txt
SocialEngineeringAdventure/app/SocialEngineeringAdventure/conf/: sea.ini  smallest_sea.html
SocialEngineeringAdventure/app/SocialEngineeringAdventure/scripts/: SocialEngineeringAdventureApplication.xml  SocialEngineeringAdventureApplication.xml.template
SocialEngineeringAdventure/python-scripts/: CMakeLists.txt
SocialEngineeringAdventure/python-scripts/sea/: BStranslator.py  CMakeLists.txt  main.pyproject  main_gui.py  requirements.txt  sea.ini  sea.spec  story.json  todo.md  translated_sea.html
SocialEngineeringAdventure/python-scripts/sea/other_mains/: DummyRobot.py  main_terminal.py
SocialEngineeringAdventure/python-scripts/sea/sea/assets/gui/: StatsPane.qml  StatsPane2.qml  StoryPane.qml  StoryPane2.qml  main.qml
SocialEngineeringAdventure/python-scripts/sea/sea/engine/: seaEngine.py  story.py
SocialEngineeringAdventure/python-scripts/sea/sea/engine/harlowe_processor/: harlowe.py
SocialEngineeringAdventure/python-scripts/sea/sea/engine/model/: Dice.py  Item.py  (+5 more)
SocialEngineeringAdventure/python-scripts/sea/sea/experiment/: ExperimentalUtils.py  RobotInterface.py  YARPInterface.py  experimental_enums.py
SocialEngineeringAdventure/python-scripts/sea/sea/view/: SoundPlayer.py
(+32 files in other folders)
